scenarios/waypoint/request-timeouts/http-route-request-timeout.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: woof-route
  namespace: woof
spec:
  parentRefs:
  - kind: Service
    group: ""
    name: woof-service
    port: 80
  rules:
  - backendRefs:
    - name: woof-service-v1
      port: 80
      weight: 50
    - name: woof-service-v2
      port: 80
      weight: 50
    timeouts:
      request: 2s
